--- a/images/nautobot/dev/Dockerfile
+++ b/images/nautobot/dev/Dockerfile
@@ -1,7 +1,10 @@
+# Accept args used in FROM (must be before any FROM)
 ARG BASE_VERSION
 ARG PYTHON_VER=3.11
 ARG APPS
-FROM ghcr.io/nautobot/nautobot:${BASE_VERSION}-py${PYTHON_VER} as nautobot-base
+
+# Base stage
+FROM ghcr.io/nautobot/nautobot:${BASE_VERSION}-py${PYTHON_VER} AS nautobot-base
 
 USER 0
 
@@ -13,9 +16,8 @@ RUN sleep 10 && \
     rm -rf /var/lib/apt/lists/* && \
     pip --no-cache-dir install --upgrade pip wheel
 
-
-
-FROM ghcr.io/nautobot/nautobot-dev:${BASE_VERSION}-py${PYTHON_VER} as builder
+# Builder stage
+FROM ghcr.io/nautobot/nautobot-dev:${BASE_VERSION}-py${PYTHON_VER} AS builder
 
 CMD ["nautobot-server", "runserver", "0.0.0.0:8080", "--insecure"]
 
@@ -25,61 +27,40 @@ RUN apt-get update && \
     apt-get clean all && \
     rm -rf /var/lib/apt/lists/*
 
-# COPY ../pyproject.toml ../poetry.lock /source/
-# COPY ../plugins /source/plugins
-# COPY ../packages /source/packages
-
-# Install the nautobot project to include Nautobot
-# RUN cd /source && \
-#     poetry install --no-interaction --no-ansi && \
-#     mkdir /tmp/dist && \
-#     poetry export --without-hashes -o /tmp/dist/requirements.txt
-
-COPY requirements.txt /tmp/
-
+# If present in the build context, this will be copied
+COPY requirements.txt /tmp/requirements.txt
 RUN pip install -r /tmp/requirements.txt
 
-COPY /command_mappers/paloalto_panos.yml /usr/local/lib/python3.11/site-packages/nautobot_device_onboarding/command_mappers/
-COPY /command_mappers/bigip_f5.yml /usr/local/lib/python3.11/site-packages/nautobot_device_onboarding/command_mappers/
+# These COPY sources must exist relative to the build context directory
+# (remove or adjust if they don't live under this folder)
+COPY command_mappers/paloalto_panos.yml \
+     /usr/local/lib/python${PYTHON_VER}/site-packages/nautobot_device_onboarding/command_mappers/
+COPY command_mappers/bigip_f5.yml \
+     /usr/local/lib/python${PYTHON_VER}/site-packages/nautobot_device_onboarding/command_mappers/
 
-COPY /parsers/ttp/paloalto_panos_show_system_info.ttp /usr/local/lib/python3.11/site-packages/nautobot_device_onboarding/parsers/ttp/
-COPY /parsers/ttp/bigip_f5_get_facts.ttp /usr/local/lib/python3.11/site-packages/nautobot_device_onboarding/parsers/ttp/
+COPY parsers/ttp/paloalto_panos_show_system_info.ttp \
+     /usr/local/lib/python${PYTHON_VER}/site-packages/nautobot_device_onboarding/parsers/ttp/
+COPY parsers/ttp/bigip_f5_get_facts.ttp \
+     /usr/local/lib/python${PYTHON_VER}/site-packages/nautobot_device_onboarding/parsers/ttp/
 
 RUN pip install --no-cache-dir "napalm-f5 @ git+https://github.com/jdrew82/napalm-f5@feat-update_rest"
 
-# -------------------------------------------------------------------------------------
-# Build Apps in plugins folder
-# -------------------------------------------------------------------------------------
-# RUN for plugin in /source/plugins/*; do \
-#         cd $plugin && \
-#         poetry build && \
-#         cp dist/*.whl /tmp/dist; \
-#     done
-
-# COPY ../jobs /opt/nautobot/jobs
-# COPY ../metrics /opt/nautobot/metrics
-# COPY ./configuration/nautobot_config.py /opt/nautobot/nautobot_config.py
-
 WORKDIR /source
 
-###################################
+# Final image
+FROM nautobot-base AS nautobot
 
-# -------------------------------------------------------------------------------------
-# Final Image
-# -------------------------------------------------------------------------------------
-FROM nautobot-base as nautobot
-
-# Accept build arguments with defaults to ensure they are set in this stage.
+# Re-declare args for use in this stage
 ARG BASE_VERSION
 ARG APPS
 ARG PYTHON_VER=3.11
 
-# Add labels for metadata
+# Metadata
 LABEL nautobot.base.version="${BASE_VERSION}" \
       nautobot.apps="${APPS}"
-LABEL org.opencontainers.image.description ""
+LABEL org.opencontainers.image.description="Nautobot image with optional plugins and tools"
 
-# Copy necessary files from the builder stage
+# Bring artifacts from builder
 COPY --from=builder /opt/nautobot /opt/nautobot
 COPY --from=builder /usr/local/lib/python${PYTHON_VER}/site-packages /usr/local/lib/python${PYTHON_VER}/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
