Refactor storage configuration in values-prod.yml
Updated persistence configuration for storage.

--- a/apps/wekan/values-prod.yml
+++ b/apps/wekan/values-prod.yml
@@ -60,8 +60,5 @@ mongodb:
   auth:
     enabled: false
   # Optional specify an existing PVC
-  persistence:
-    storageClass: rook-cephfs-retain
-    accessModes:
-      - ReadWriteOnce
-    size: 1Gi
+  storage:
+    requestedSize: 1Gi
