Update storage configuration in values-prod.yml
Changed storage configuration to use an existing PVC.

--- a/apps/wekan/values-prod.yml
+++ b/apps/wekan/values-prod.yml
@@ -61,4 +61,4 @@ mongodb:
     enabled: false
   # Optional specify an existing PVC
   storage:
-    requestedSize: 1Gi
+    persistentVolumeClaimName: wekan-mongodb-pvc
