--- a/apps/signoz/values-prod.yml
+++ b/apps/signoz/values-prod.yml
@@ -3,6 +3,10 @@ global:
   clusterName: prod-cluster
 
 clickhouse:
+  zookeeper:
+    persistence:
+    storageClass: rook-cephfs-retain
+    size: 2Gi
   persistence:
     storageClass: rook-cephfs-retain
     size: 5Gi
