--- a/apps/mcp-inspector/overlays/prod/kustomization.yml
+++ b/apps/mcp-inspector/overlays/prod/kustomization.yml
@@ -2,3 +2,5 @@ resources:
   - deployment.yml
   - service.yml
   - ingress-routes.yml
+  - cluster-secret-store.yml
+  - external-secret-proxy-token.yml
