--- a/apps/mcp-inspector/overlays/prod/ingress-routes.yml
+++ b/apps/mcp-inspector/overlays/prod/ingress-routes.yml
@@ -1,6 +1,6 @@
 ---
 # Traefik CRD: IngressRoute for the UI
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: mcp-inspector-ui
@@ -18,7 +18,7 @@ spec:
     secretName: prod-apps-certificate-secret
 ---
 # Traefik CRD: IngressRoute for the Proxy (separate host)
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: mcp-inspector-proxy
