--- a/apps/kube-vip/values-prod.yml
+++ b/apps/kube-vip/values-prod.yml
@@ -1,3 +1,9 @@
+image:
+  repository: ghcr.io/kube-vip/kube-vip
+  pullPolicy: Always
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "latest"
+
 config:
   address: "192.168.101.160"
 
