--- a/apps/rook-ceph/overlays/prod/ceph-cluster.yml
+++ b/apps/rook-ceph/overlays/prod/ceph-cluster.yml
@@ -49,7 +49,7 @@ spec:
             memory: "8192Mi"
         devices:
           - name: "sda"
-      - name: rocky9-prod-node5-un
+      - name: fedora-prod-node5-un
         resources:
           limits:
             memory: "6144Mi"
