--- a/clusters/prod/hosts.yml
+++ b/clusters/prod/hosts.yml
@@ -8,7 +8,7 @@ all:
       ansible_host: 192.168.101.158
       ip: 192.168.101.158
       access_ip: 192.168.101.158
-    rocky9-prod-node3:
+    fedora-prod-node3:
       ansible_host: 192.168.101.159
       ip: 192.168.101.159
       access_ip: 192.168.101.159
@@ -26,13 +26,13 @@ all:
       hosts:
         rocky9-prod-node1:
         rocky9-prod-node2:
-        rocky9-prod-node3:
+        fedora-prod-node3:
             
     kube_node:
       hosts:
         rocky9-prod-node1:
         rocky9-prod-node2:
-        rocky9-prod-node3:
+        fedora-prod-node3:
         rocky9-prod-node4-sc:
         fedora-prod-node5-un:
             
@@ -40,7 +40,7 @@ all:
       hosts:
         rocky9-prod-node1:
         rocky9-prod-node2:
-        rocky9-prod-node3:
+        fedora-prod-node3:
             
     k8s_cluster:
       children:
