--- a/apps/github-mcp-server/overlays/prod/ingress-route.yml
+++ b/apps/github-mcp-server/overlays/prod/ingress-route.yml
@@ -1,1 +1,20 @@
-##
+---
+ apiVersion: traefik.io/v1alpha1
+ kind: IngressRoute
+ metadata:
+   name: github-mcp-prod-ingressroute  # <-- Replace with your IngressRoute name
+   namespace: mcp-servers-prod  # <-- Replace with your namespace
+ spec:
+   entryPoints:
+     - web
+     - websecure
+   routes:
+     - match: Host(`github-mcp.home.nerdylyonsden.io`)  # <-- Replace with your FQDN
+       kind: Rule
+       services:
+         - name: github-mcp-server-prod  # <-- Replace with your service name
+           port: 80
+# --> (Optional) Add certificate secret
+   tls:
+     secretName: prod-apps-certificate-secret # < cert-manager will store the created certificate in this secret.
+# <--
