--- a/helm-charts/github-mcp-server/charts/github-mcp-server/values.yaml
+++ b/helm-charts/github-mcp-server/charts/github-mcp-server/values.yaml
@@ -127,7 +127,11 @@ tolerations: []
 affinity: {}
 
 env:
-  personalAccessToken: ""
+- name: personalAccessToken
+  valueFrom:
+    secretKeyRef:
+      name: mcp-inspector-prod-proxy-token
+      key: pat
   toolsets:
     - repos
     - issues
