--- a/helm-charts/github-mcp-server/charts/github-mcp-server/values.yaml
+++ b/helm-charts/github-mcp-server/charts/github-mcp-server/values.yaml
@@ -127,12 +127,9 @@ tolerations: []
 affinity: {}
 
 env:
-  - name: personalAccessToken
-    valueFrom:
-      secretKeyRef:
-        name: github-repo-credentials
-        key: github-pat
-      
+  personalAccessTokenSecretRef:
+    name: github-repo-credentials
+    key: github-pat
   toolsets:
     - repos
     - issues
