--- a/apps/gitlab-mcp-server/overlays/prod/external-secrets-gitlab.yml
+++ b/apps/gitlab-mcp-server/overlays/prod/external-secrets-gitlab.yml
@@ -9,14 +9,14 @@ spec:
     name: mcp-servers-vault-backend
     kind: SecretStore
   target:
-    name: gitlab-repo-credentials
+    name: gitlab-mcp-credentials
     creationPolicy: Owner
   data:
     - secretKey: gitlab-pat
       remoteRef:
-        key: secret/my-gitlab
+        key: secret/gitlab-mcp
         property: pat
     - secretKey: gitlab-api-url
       remoteRef:
-        key: secret/my-gitlab
+        key: secret/gitlab-mcp
         property: api_url
