--- a/.github/workflows/install-argocd.yml
+++ b/.github/workflows/install-argocd.yml
@@ -51,7 +51,9 @@ jobs:
     - name: Install Argo CD on Kubernetes
       run: |
         kubectl create namespace argocd || true
-        kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+        kubectl apply --server-side --force-conflicts -n argocd \
+          -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+
 
     # Install Argo CD CLI
     - name: Install Argo CD CLI
