--- a/apps/gitlab-mcp-server/overlays/prod/deployment.yml
+++ b/apps/gitlab-mcp-server/overlays/prod/deployment.yml
@@ -40,11 +40,7 @@ spec:
                   name: gitlab-mcp-credentials
                   key: gitlab-pat
             - name: GITLAB_API_URL
-              valueFrom:
-                secretKeyRef:
-                  name: gitlab-mcp-credentials
-                  key: gitlab-api-url
-                  optional: true
+              value: "https://gitlab.com/api/v4"
           ports:
             - name: http
               containerPort: 8000
