--- a/apps/gitlab-mcp-server/overlays/prod/deployment.yml
+++ b/apps/gitlab-mcp-server/overlays/prod/deployment.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: gitlab-mcp-server
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
         - name: gitlab-mcp-server
           image: node:22-alpine
@@ -24,42 +25,64 @@ spec:
             - "-y"
             - "supergateway"
             - "--stdio"
-            - "npx -y @modelcontextprotocol/server-gitlab"
+            - "npx -y --prefer-offline @modelcontextprotocol/server-gitlab"
             - "--outputTransport"
             - "streamableHttp"
+            - "--stateful"
+            - "--sessionTimeout"
+            - "900000"
             - "--streamableHttpPath"
             - "/mcp"
             - "--port"
             - "8000"
             - "--healthEndpoint"
             - "/healthz"
+            - "--logLevel"
+            - "info"
           env:
+            - name: NPM_CONFIG_UPDATE_NOTIFIER
+              value: "false"
+            - name: NPM_CONFIG_FUND
+              value: "false"
+            - name: NPM_CONFIG_AUDIT
+              value: "false"
             - name: GITLAB_PERSONAL_ACCESS_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: gitlab-mcp-credentials
+                  name: gitlab-repo-credentials
                   key: gitlab-pat
             - name: GITLAB_API_URL
               value: "https://gitlab.com/api/v4"
           ports:
             - name: http
               containerPort: 8000
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 5
+            timeoutSeconds: 2
+            failureThreshold: 30
           readinessProbe:
             httpGet:
               path: /healthz
               port: 8000
             initialDelaySeconds: 5
-            periodSeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 2
+            failureThreshold: 6
           livenessProbe:
             httpGet:
               path: /healthz
               port: 8000
-            initialDelaySeconds: 15
-            periodSeconds: 20
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 6
           resources:
             requests:
-              cpu: 100m
-              memory: 256Mi
+              cpu: 250m
+              memory: 512Mi
             limits:
-              cpu: "500m"
+              cpu: "1000m"
               memory: 1Gi
