--- a/apps/gitlab-mcp-server/overlays/prod/deployment.yml
+++ b/apps/gitlab-mcp-server/overlays/prod/deployment.yml
@@ -49,7 +49,7 @@ spec:
             - name: GITLAB_PERSONAL_ACCESS_TOKEN
               valueFrom:
                 secretKeyRef:
-                  name: gitlab-repo-credentials
+                  name: gitlab-mcp-credentials
                   key: gitlab-pat
             - name: GITLAB_API_URL
               value: "https://gitlab.com/api/v4"
