Add API image configuration to values-prod.yml
Added API image configuration for the backend.

--- a/apps/plane/values-prod.yml
+++ b/apps/plane/values-prod.yml
@@ -30,6 +30,9 @@ minio:
   env:
     minio_endpoint_ssl: false
 
+api:
+  image: makeplane/plane-backend
+
 
 external_secrets:
   # Name of the existing Kubernetes Secret resource; see README for more details
