Add memory limits and requests for worker

--- a/apps/plane/values-prod.yml
+++ b/apps/plane/values-prod.yml
@@ -47,6 +47,8 @@ api:
 
 worker:
   image: makeplane/plane-backend
+  memoryLimit: 2000Mi
+  memoryRequest: 256Mi
 
 beatworker:
   image: makeplane/plane-backend
