--- a/apps/plane/overlays/prod/middleware-https.yml
+++ b/apps/plane/overlays/prod/middleware-https.yml
@@ -5,6 +5,8 @@ metadata:
   namespace: plane-prod
 spec:
   headers:
+    headers:
     customRequestHeaders:
       X-Forwarded-Proto: "https"
       X-Forwarded-Port: "443"
+      X-Forwarded-Host: "plane-pm.home.nerdylyonsden.io"
