Comment out resources in kustomization.yml
Comment out deployment and external secrets resources.

--- a/apps/plane-mcp-server/overlays/prod/kustomization.yml
+++ b/apps/plane-mcp-server/overlays/prod/kustomization.yml
@@ -1,5 +1,5 @@
 resources:
-  - deployment.yml
+  #- deployment.yml
   - service.yml
   - ingress-route.yml
-  - external-secrets-plane.yml
+  #- external-secrets-plane.yml
