--- a/apps/plane-mcp-server/overlays/prod/deployment.yml
+++ b/apps/plane-mcp-server/overlays/prod/deployment.yml
@@ -15,6 +15,8 @@ spec:
         app: plane-mcp-server
     spec:
       terminationGracePeriodSeconds: 30
+      imagePullSecrets:
+        - name: gitlab-regcred
       containers:
         - name: plane-mcp-server
           image: ghcr.io/leohthelyon17/plane-mcp-server:latest
