Update external secrets repo configuration

--- a/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
+++ b/apps/plane-mcp-server/overlays/prod/external-secrets-repo.yml
@@ -4,10 +4,10 @@ metadata:
   name: repo-credentials-secret
   namespace: mcp-servers-prod
 spec:
-  refreshInterval: "1h"  # How often to sync the secret
+  refreshInterval: "1h"
   secretStoreRef:
-    name: vault-backend-netbox-prod
-    kind: ClusterSecretStore
+    name: mcp-servers-vault-backend
+    kind: SecretStore
   target:
     name: net-automation-k8s-repo-credentials  # Name of the Kubernetes Secret
     creationPolicy: Owner
